--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="search__form">
           <iframe
-            src="./flight_search.html"
+            src="./pages/flight_search.html"
             frameborder="0"
             name="search__type"
             class="frame"
@@ -137,13 +137,13 @@
       <!-- types of stay -->
       <h1 id="stay">Discover Your Perfect Stay</h1>
       <div class="stay-section">
-        <iframe src="./stay.html" frameborder="0" class="frame"></iframe>
+        <iframe src="./pages/stay.html" frameborder="0" class="frame"></iframe>
       </div>
 
       <h1 id="places">Uncover the World's Best Destinations</h1>
       <div class="places-section">
         <iframe
-          src="./destinations.html"
+          src="./pages/destinations.html"
           frameborder="0"
           class="frame"
         ></iframe>
@@ -151,7 +151,7 @@
 
       <h1>Trusted by Travelers Worldwide</h1>
       <div class="testimonial-section">
-        <iframe src="./testimonial.html" frameborder="0" class="frame"></iframe>
+        <iframe src="./pages/testimonial.html" frameborder="0" class="frame"></iframe>
       </div>
 
       <div class="footer-section">
