--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="../assets/icons/favicon.gif"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./assets/icons/favicon.gif" type="image/x-icon" />
     <title>AtlasWay</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,26 +11,20 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/searchbox.css" />
-    <link rel="stylesheet" href="/css/animations.css" />
-    <link rel="stylesheet" href="/css/section.css" />
-    <link rel="stylesheet" href="../css/media_queries.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/searchbox.css" />
+    <link rel="stylesheet" href="./css/animations.css" />
+    <link rel="stylesheet" href="./css/section.css" />
+    <link rel="stylesheet" href="./css/media_queries.css" />
   </head>
 
   <body>
-    <!-- <div class="preloader">
-      <img src="../assets/icons/loader.gif" alt="loader" loading="lazy" />
-      <h3>Loading...</h3>
-    </div> -->
-
     <div class="container">
       <!-- ===================== Navbar Section ===================== -->
-
       <nav class="navbar">
         <div class="logo">
           <img
-            src="../assets/icons/favicon.gif"
+            src="./assets/icons/favicon.gif"
             class="logo__icon"
             alt="AtlasWay"
             height="50"
@@ -51,7 +41,6 @@
       </nav>
 
       <!-- ===================== Tagline Section ===================== -->
-
       <div class="tagline">
         <span>Find</span>
         <span>your</span>
@@ -60,31 +49,23 @@
         <span>AtlasWay</span>
       </div>
 
-    <!-- ===================== Search Menu Section ===================== -->
-
+      <!-- ===================== Search Menu Section ===================== -->
       <section class="search-box">
         <div class="search__menu">
-          <a
-            href="./flight_search.html"
-            target="search__type"
-            class="menu__item"
-          >
-            <img src="../assets/icons/flight.png" loading="lazy" alt="flight" />
+          <a href="./pages/search.html" target="search__type" class="menu__item">
+            <img src="./assets/icons/flight.png" loading="lazy" alt="flight" />
             <span>Flights</span>
           </a>
-
-          <a href="./search.html" target="search__type" class="menu__item">
-            <img src="../assets/icons/stay.png" loading="lazy" alt="stay" />
+          <a href="./pages/search.html" target="search__type" class="menu__item">
+            <img src="./assets/icons/stay.png" loading="lazy" alt="stay" />
             <span>Stay</span>
           </a>
-
           <a href="#places" class="menu__item">
-            <img src="../assets/icons/activities.png" loading="lazy" alt="activities" />
+            <img src="./assets/icons/activities.png" loading="lazy" alt="activities" />
             <span>Activities</span>
           </a>
-
           <a href="#stay" class="menu__item">
-            <img src="../assets/icons/packages.png" loading="lazy" alt="packages" />
+            <img src="./assets/icons/packages.png" loading="lazy" alt="packages" />
             <span>Packages</span>
           </a>
         </div>
@@ -99,7 +80,7 @@
         </div>
       </section>
 
-    <!-- ===================== Hero Section ===================== -->
+      <!-- ===================== Hero Section ===================== -->
       <section class="hero section">
         <p>
           Explore More for Less with <br />
@@ -107,12 +88,11 @@
         </p>
       </section>
 
-    <!-- ===================== Feature Section ===================== -->
-
+      <!-- ===================== Feature Section ===================== -->
       <h1>Travel Made Easy with Our Top Features</h1>
       <section class="features">
         <div class="feature__card">
-          <img src="../assets/illustrations/flexible.png" loading="lazy" alt="flexible" />
+          <img src="./assets/illustrations/flexible.png" loading="lazy" alt="flexible" />
           <div class="feature__details">
             <h2>Flexible Booking</h2>
             <p>Change your plans without the hassle.</p>
@@ -120,7 +100,7 @@
         </div>
 
         <div class="feature__card">
-          <img src="../assets/illustrations/offers.png" loading="lazy" alt="offers" />
+          <img src="./assets/illustrations/offers.png" loading="lazy" alt="offers" />
           <div class="feature__details">
             <h2>Best Deals</h2>
             <p>Unbeatable prices on hotels, and flights.</p>
@@ -128,7 +108,7 @@
         </div>
 
         <div class="feature__card">
-          <img src="../assets/illustrations/payment.png" loading="lazy" alt="payment" />
+          <img src="./assets/illustrations/payment.png" loading="lazy" alt="payment" />
           <div class="feature__details">
             <h2>Secure Payments</h2>
             <p>Your payments are safe and protected.</p>
@@ -136,7 +116,7 @@
         </div>
 
         <div class="feature__card">
-          <img src="../assets/illustrations/service.png" loading="lazy" alt="service" />
+          <img src="./assets/illustrations/service.png" loading="lazy" alt="service" />
           <div class="feature__details">
             <h2>24/7 Support</h2>
             <p>Travel with peace of mind, we are always here for you.</p>
@@ -153,23 +133,13 @@
       <!-- ===================== Places Section ===================== -->
       <h1 id="places">Uncover the World's Best Destinations</h1>
       <section class="places-section">
-        <iframe
-          src="./pages/destinations.html"
-          frameborder="0"
-          class="frame"
-          loading="lazy"
-        ></iframe>
+        <iframe src="./pages/destinations.html" frameborder="0" class="frame" loading="lazy"></iframe>
       </section>
 
       <!-- ===================== Testimonials Section ===================== -->
       <h1>Trusted by Travelers Worldwide</h1>
       <section class="testimonial-section">
-        <iframe
-          src="./pages/testimonial.html"
-          frameborder="0"
-          class="frame"
-          loading="lazy"
-        ></iframe>
+        <iframe src="./pages/testimonial.html" frameborder="0" class="frame" loading="lazy"></iframe>
       </section>
 
       <!-- ===================== Footer Section ===================== -->
@@ -180,7 +150,7 @@
           <div class="logo footer__logo">
             <div class="f__logo">
               <img
-                src="../assets/icons/favicon.gif"
+                src="./assets/icons/favicon.gif"
                 class="logo__icon"
                 alt="AtlasWay"
                 height="50"
@@ -232,14 +202,14 @@
             <span>Privacy Policy</span>
           </div>
           <div class="social__links">
-            <span><img src="../assets/icons/x.png" loading="lazy" alt="x" /></span>
-            <span><img src="../assets/icons/insta.png" loading="lazy" alt="insta" /></span>
+            <span><img src="./assets/icons/x.png" loading="lazy" alt="x" /></span>
+            <span><img src="./assets/icons/insta.png" loading="lazy" alt="insta" /></span>
             <span
-              ><img src="../assets/icons/facebook.png" loading="lazy" alt="facebook"
+              ><img src="./assets/icons/facebook.png" loading="lazy" alt="facebook"
             /></span>
-            <span><img src="../assets/icons/youtube.png" loading="lazy" alt="youtube" /></span>
+            <span><img src="./assets/icons/youtube.png" loading="lazy" alt="youtube" /></span>
             <span
-              ><img src="../assets/icons/pinterest.png" loading="lazy" alt="pinterest"
+              ><img src="./assets/icons/pinterest.png" loading="lazy" alt="pinterest"
             /></span>
           </div>
         </div>
