--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -4,58 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/searchbox.css" />
-    <link rel="stylesheet" href="/css/section.css" />
-    <link rel="stylesheet" href="/css/animations.css" />
-    <link rel="stylesheet" href="../css/media_queries.css">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/searchbox.css" />
+    <link rel="stylesheet" href="./css/section.css" />
+    <link rel="stylesheet" href="./css/animations.css" />
+    <link rel="stylesheet" href="./css/media_queries.css">
 
 </head>
 <body>
     <div class="places__container">
         <div class="places__slide">
             <div class="places__card">
-          <img src="../assets/places/bali.jpg" alt="bali">
+          <img src="./assets/places/bali.jpg" alt="bali">
           <span class="places__details">Bali</span>
         </div>
 
         <div class="places__card">
-          <img src="../assets/places/barcelona.jpg" alt="barcelona">
+          <img src="./assets/places/barcelona.jpg" alt="barcelona">
           <span class="places__details">Barcelona</span>
         </div>
 
         <div class="places__card">
-          <img src="../assets/places/dubai.jpg" alt="dubai">
+          <img src="./assets/places/dubai.jpg" alt="dubai">
           <span class="places__details">Dubai</span>
         </div>
 
         <div class="places__card">
-          <img src="../assets/places/india.jpg" alt="india">
+          <img src="./assets/places/india.jpg" alt="india">
           <span class="places__details">India</span>
         </div>
 
         <div class="places__card">
-          <img src="../assets/places/london.jpg" alt="london">
+          <img src="./assets/places/london.jpg" alt="london">
           <span class="places__details">London</span>
         </div>
 
         <div class="places__card">
-          <img src="../assets/places/newyork.jpg" alt="newyork">
+          <img src="./assets/places/newyork.jpg" alt="newyork">
           <span class="places__details">New York</span>
         </div>
 
         <div class="places__card">
-          <img src="../assets/places/tokyo.jpg" alt="tokyo">
+          <img src="./assets/places/tokyo.jpg" alt="tokyo">
           <span class="places__details">Tokyo</span>
         </div>
 
         <div class="places__card">
-          <img src="../assets/places/paris.jpg" alt="paris">
+          <img src="./assets/places/paris.jpg" alt="paris">
           <span class="places__details">Paris</span>
         </div>
 
          <div class="places__card">
-          <img src="../assets/places/rome.jpg" alt="rome">
+          <img src="./assets/places/rome.jpg" alt="rome">
           <span class="places__details">Rome</span>
         </div>
         </div>
