--- a/pages/search.html
+++ b/pages/search.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/searchbox.css" />
-    <link rel="stylesheet" href="../css/media_queries.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/searchbox.css" />
+    <link rel="stylesheet" href="./css/media_queries.css">
 
   </head>
   <body>
