--- a/pages/stay.html
+++ b/pages/stay.html
@@ -4,53 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/searchbox.css" />
-    <link rel="stylesheet" href="./css/section.css" />
-    <link rel="stylesheet" href="./css/animations.css" />
-    <link rel="stylesheet" href="./css/media_queries.css">
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/searchbox.css" />
+    <link rel="stylesheet" href="../css/section.css" />
+    <link rel="stylesheet" href="../css/animations.css" />
+    <link rel="stylesheet" href="../css/media_queries.css">
 
   </head>
   <body>
     <div class="stay__container">
       <div class="card__slide">
         <div class="stay__card">
-          <img src="./assets/stay/resort.jpg" alt="resort" />
+          <img src="../assets/stay/resort.jpg" alt="resort" />
           <span class="stay__details">Resort</span>
         </div>
 
         <div class="stay__card">
-          <img src="./assets/stay/hut.jpg" alt="Cabin" />
+          <img src="../assets/stay/hut.jpg" alt="Cabin" />
           <span class="stay__details">Cabin</span>
         </div>
 
         <div class="stay__card">
-          <img src="./assets/stay/chalet.jpg" alt="chalet" />
+          <img src="../assets/stay/chalet.jpg" alt="chalet" />
           <span class="stay__details">Chalet</span>
         </div>
 
         <div class="stay__card">
-          <img src="./assets/stay/hotel.jpg" alt="Hotel" />
+          <img src="../assets/stay/hotel.jpg" alt="Hotel" />
           <span class="stay__details">Hotel</span>
         </div>
 
         <div class="stay__card">
-          <img src="./assets/stay/villa.jpg" alt="villa" />
+          <img src="../assets/stay/villa.jpg" alt="villa" />
           <span class="stay__details">Villa</span>
         </div>
 
         <div class="stay__card">
-          <img src="./assets/stay/beach.jpg" alt="beach" />
+          <img src="../assets/stay/beach.jpg" alt="beach" />
           <span class="stay__details">Beach house</span>
         </div>
 
         <div class="stay__card">
-          <img src="./assets/stay/apartment.jpg" alt="Appartment" />
+          <img src="../assets/stay/apartment.jpg" alt="Appartment" />
           <span class="stay__details">Appartment</span>
         </div>
 
         <div class="stay__card">
-          <img src="./assets/stay/tent.jpg" alt="tent" />
+          <img src="../assets/stay/tent.jpg" alt="tent" />
           <span class="stay__details">Tent</span>
         </div>
 
