--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- ===================== Search Menu Section ===================== -->
       <section class="search-box">
         <div class="search__menu">
-          <a href="./pages/search.html" target="search__type" class="menu__item">
+          <a href="./pages/flight_search.html" target="search__type" class="menu__item">
             <img src="./assets/icons/flight.png" loading="lazy" alt="flight" />
             <span>Flights</span>
           </a>
