--- a/pages/flight_search.html
+++ b/pages/flight_search.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/searchbox.css">
-    <link rel="stylesheet" href="./css/section.css">
-    <link rel="stylesheet" href="./css/media_queries.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/searchbox.css">
+    <link rel="stylesheet" href="../css/section.css">
+    <link rel="stylesheet" href="../css/media_queries.css">
 
 </head>
 <body>
@@ -15,26 +15,26 @@
 
         <div class="field-container">
             <div class="field">
-            <img src="./assets/icons/plane-departure.png" alt="From"> 
+            <img src="../assets/icons/plane-departure.png" alt="From"> 
             <input type="text" id="flight__data" placeholder="Origin: " />
         </div>
 
         <div class="swap">
-            <img src="./assets/icons/swap.png" alt="swap">
+            <img src="../assets/icons/swap.png" alt="swap">
         </div>
 
         <div class="field">
-            <img src="./assets/icons/plane-arrival.png" alt="To"> 
+            <img src="../assets/icons/plane-arrival.png" alt="To"> 
             <input type="text" id="flight__data" placeholder="Destination: " />
         </div>
 
         <div class="field">
-            <img src="./assets/icons/date.png" alt="Date"> 
+            <img src="../assets/icons/date.png" alt="Date"> 
             <input type="text" id="flight__data" placeholder="Select date: " />
         </div>
 
         <div class="field">
-            <img src="./assets/icons/persons.png" alt="persons"> 
+            <img src="../assets/icons/persons.png" alt="persons"> 
             <input type="text" id="flight__data" placeholder=" 1 Traveler" />
         </div>
         </div>
