--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
   </head>
 
   <body>
+     <div class="preloader">
+      <img src="../assets/icons/loader.gif" alt="loader" />
+      <h3>Loading...</h3>
+    </div>
+
     <div class="container">
       <!-- ===================== Navbar Section ===================== -->
-      <nav class="navbar">
+      <a href="#top" class="scroll__top"><img src="./assets/icons/top.png" alt="scroll__top"></a>
+      <nav class="navbar" id="top">
         <div class="logo">
           <img
             src="./assets/icons/favicon.gif"
@@ -30,7 +36,7 @@
             height="50"
             loading="lazy"
           />
-          <a href="#"><span class="logo__text">AtlasWay</span></a>
+          <a href="./index.html"><span class="logo__text">AtlasWay</span></a>
         </div>
         <div class="nav__list">
           <span class="nav__link"><a href="#stay">Find Your Stay</a></span>
@@ -156,7 +162,7 @@
                 height="50"
                 loading="lazy"
               />
-              <a href="#"><span class="logo__text">AtlasWay</span></a>
+              <a href="./index.html"><span class="logo__text">AtlasWay</span></a>
             </div>
             <div class="news">
               <p>
