--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
      <div class="preloader">
-      <img src="../assets/icons/loader.gif" alt="loader" />
+      <img src="./assets/icons/loader.gif" alt="loader" />
       <h3>Loading...</h3>
     </div>
 
