--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <span class="nav__link"><a href="#stay">Find Your Stay</a></span>
           <span class="nav__link"><a href="#places">Trips</a></span>
           <span class="nav__link"><a href="#">Help</a></span>
-          <span class="nav__link button"><a href="#">Sign in</a></span>
+          <span class="nav__link button"><a href="./pages/login.html">Sign in</a></span>
         </div>
       </nav>
 
