--- a/pages/login.html
+++ b/pages/login.html
@@ -50,14 +50,14 @@
         <div class="form">
           <div class="login__field">
             <img src="../assets/icons/mail.png" alt="mail" />
-            <input type="email" class="login__field" placeholder="email" />
+            <input type="email" class="input-field" placeholder="email" />
           </div>
 
           <div class="login__field">
             <img src="../assets/icons/password.png" alt="password" />
             <input
               type="password"
-              class="login__field"
+              class="input-field"
               placeholder="password"
             />
           </div>
