--- a/index.html
+++ b/index.html
@@ -190,84 +190,84 @@
       <section class="stay-section">
         <div class="card__slide">
           <div class="stay__card">
-            <img src="../assets/stay/resort.jpg" alt="resort" />
+            <img src="./assets/stay/resort.jpg" alt="resort" />
             <span class="stay__details">Resort</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/hut.jpg" alt="Cabin" />
+            <img src="./assets/stay/hut.jpg" alt="Cabin" />
             <span class="stay__details">Cabin</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/chalet.jpg" alt="chalet" />
+            <img src="./assets/stay/chalet.jpg" alt="chalet" />
             <span class="stay__details">Chalet</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/hotel.jpg" alt="Hotel" />
+            <img src="./assets/stay/hotel.jpg" alt="Hotel" />
             <span class="stay__details">Hotel</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/villa.jpg" alt="villa" />
+            <img src="./assets/stay/villa.jpg" alt="villa" />
             <span class="stay__details">Villa</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/beach.jpg" alt="beach" />
+            <img src="./assets/stay/beach.jpg" alt="beach" />
             <span class="stay__details">Beach house</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/apartment.jpg" alt="Appartment" />
+            <img src="./assets/stay/apartment.jpg" alt="Appartment" />
             <span class="stay__details">Appartment</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/tent.jpg" alt="tent" />
+            <img src="./assets/stay/tent.jpg" alt="tent" />
             <span class="stay__details">Tent</span>
           </div>
 
           <!-- duplicate stay cards -->
 
           <div class="stay__card">
-            <img src="../assets/stay/resort.jpg" alt="resort" />
+            <img src="./assets/stay/resort.jpg" alt="resort" />
             <span class="stay__details">Resort</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/hut.jpg" alt="Cabin" />
+            <img src="./assets/stay/hut.jpg" alt="Cabin" />
             <span class="stay__details">Cabin</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/chalet.jpg" alt="chalet" />
+            <img src="./assets/stay/chalet.jpg" alt="chalet" />
             <span class="stay__details">Chalet</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/hotel.jpg" alt="Hotel" />
+            <img src="./assets/stay/hotel.jpg" alt="Hotel" />
             <span class="stay__details">Hotel</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/villa.jpg" alt="villa" />
+            <img src="./assets/stay/villa.jpg" alt="villa" />
             <span class="stay__details">Villa</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/beach.jpg" alt="beach" />
+            <img src="./assets/stay/beach.jpg" alt="beach" />
             <span class="stay__details">Beach house</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/apartment.jpg" alt="Appartment" />
+            <img src="./assets/stay/apartment.jpg" alt="Appartment" />
             <span class="stay__details">Appartment</span>
           </div>
 
           <div class="stay__card">
-            <img src="../assets/stay/tent.jpg" alt="tent" />
+            <img src="./assets/stay/tent.jpg" alt="tent" />
             <span class="stay__details">Tent</span>
           </div>
         </div>
@@ -418,94 +418,94 @@
       <section class="places-section">
         <div class="places__slide">
           <div class="places__card">
-            <img src="../assets/places/bali.jpg" alt="bali" />
+            <img src="./assets/places/bali.jpg" alt="bali" />
             <span class="places__details">Bali</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/barcelona.jpg" alt="barcelona" />
+            <img src="./assets/places/barcelona.jpg" alt="barcelona" />
             <span class="places__details">Barcelona</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/dubai.jpg" alt="dubai" />
+            <img src="./assets/places/dubai.jpg" alt="dubai" />
             <span class="places__details">Dubai</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/india.jpg" alt="india" />
+            <img src="./assets/places/india.jpg" alt="india" />
             <span class="places__details">India</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/london.jpg" alt="london" />
+            <img src="./assets/places/london.jpg" alt="london" />
             <span class="places__details">London</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/newyork.jpg" alt="newyork" />
+            <img src="./assets/places/newyork.jpg" alt="newyork" />
             <span class="places__details">New York</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/tokyo.jpg" alt="tokyo" />
+            <img src="./assets/places/tokyo.jpg" alt="tokyo" />
             <span class="places__details">Tokyo</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/paris.jpg" alt="paris" />
+            <img src="./assets/places/paris.jpg" alt="paris" />
             <span class="places__details">Paris</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/rome.jpg" alt="rome" />
+            <img src="./assets/places/rome.jpg" alt="rome" />
             <span class="places__details">Rome</span>
           </div>
 
           <!-- duplicate cards -->
 
           <div class="places__card">
-            <img src="../assets/places/bali.jpg" alt="bali" />
+            <img src="./assets/places/bali.jpg" alt="bali" />
             <span class="places__details">Bali</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/barcelona.jpg" alt="barcelona" />
+            <img src="./assets/places/barcelona.jpg" alt="barcelona" />
             <span class="places__details">Barcelona</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/dubai.jpg" alt="dubai" />
+            <img src="./assets/places/dubai.jpg" alt="dubai" />
             <span class="places__details">Dubai</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/india.jpg" alt="india" />
+            <img src="./assets/places/india.jpg" alt="india" />
             <span class="places__details">India</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/london.jpg" alt="london" />
+            <img src="./assets/places/london.jpg" alt="london" />
             <span class="places__details">London</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/newyork.jpg" alt="newyork" />
+            <img src="./assets/places/newyork.jpg" alt="newyork" />
             <span class="places__details">New York</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/tokyo.jpg" alt="tokyo" />
+            <img src="./assets/places/tokyo.jpg" alt="tokyo" />
             <span class="places__details">Tokyo</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/paris.jpg" alt="paris" />
+            <img src="./assets/places/paris.jpg" alt="paris" />
             <span class="places__details">Paris</span>
           </div>
 
           <div class="places__card">
-            <img src="../assets/places/rome.jpg" alt="rome" />
+            <img src="./assets/places/rome.jpg" alt="rome" />
             <span class="places__details">Rome</span>
           </div>
         </div>
@@ -516,61 +516,61 @@
       <section class="testimonial-section">
         <div class="testimonial__card">
           <div class="icon1 icon">
-            <img src="../assets/icons/pin.png" alt="quote" />
+            <img src="./assets/icons/pin.png" alt="quote" />
           </div>
           <div class="icon2 icon">
-            <span>4.7</span> <img src="../assets/icons/star.png" alt="rating" />
+            <span>4.7</span> <img src="./assets/icons/star.png" alt="rating" />
           </div>
           <div class="comment">
             "AtlasWay made my travel planning effortless. The deals are unbeatable!"
           </div>
           <hr />
-          <div class="user"><img src="../assets/users/user1.jpg" alt="user"></div>
+          <div class="user"><img src="./assets/users/user1.jpg" alt="user"></div>
           <div class="user__name">Paul</div>
         </div>
 
         <div class="testimonial__card">
           <div class="icon1 icon">
-            <img src="../assets/icons/pin.png" alt="quote" />
+            <img src="./assets/icons/pin.png" alt="quote" />
           </div>
           <div class="icon2 icon">
-            <span>4.5</span> <img src="../assets/icons/star.png" alt="rating" />
+            <span>4.5</span> <img src="./assets/icons/star.png" alt="rating" />
           </div>
           <div class="comment">
             "The best platform for comparing flights and hotels. Highly recommended!"
           </div>
           <hr />
-          <div class="user"><img src="../assets/users/user2.jpg" alt="user"></div>
+          <div class="user"><img src="./assets/users/user2.jpg" alt="user"></div>
           <div class="user__name">Emilia</div>
         </div>
 
         <div class="testimonial__card">
           <div class="icon1 icon">
-            <img src="../assets/icons/pin.png" alt="quote" />
+            <img src="./assets/icons/pin.png" alt="quote" />
           </div>
           <div class="icon2 icon">
-            <span>4.9</span> <img src="../assets/icons/star.png" alt="rating" />
+            <span>4.9</span> <img src="./assets/icons/star.png" alt="rating" />
           </div>
           <div class="comment">
             "I found the perfect stay with AtlasWay. Beautiful place and great price!"
           </div>
           <hr />
-          <div class="user"><img src="../assets/users/user4.jpg" alt="user"></div>
+          <div class="user"><img src="./assets/users/user4.jpg" alt="user"></div>
           <div class="user__name">Kalyan</div>
         </div>
 
         <div class="testimonial__card">
           <div class="icon1 icon">
-            <img src="../assets/icons/pin.png" alt="quote" />
+            <img src="./assets/icons/pin.png" alt="quote" />
           </div>
           <div class="icon2 icon">
-            <span>4.8</span> <img src="../assets/icons/star.png" alt="rating" />
+            <span>4.8</span> <img src="./assets/icons/star.png" alt="rating" />
           </div>
           <div class="comment">
             "Booking was quick, easy, and secure. I'll definitely use it again!"
           </div>
           <hr />
-          <div class="user"><img src="../assets/users/user3.jpg" alt="user"></div>
+          <div class="user"><img src="./assets/users/user3.jpg" alt="user"></div>
           <div class="user__name">Anjali</div>
         </div>
       </section>
