--- a/pages/flight_search.html
+++ b/pages/flight_search.html
@@ -35,8 +35,10 @@
           <img src="../assets/icons/persons.png" alt="persons" />
           <input type="text" id="flight__data" placeholder=" 1 Traveler" />
         </div>
-        <button class="search__button">search</button>
+        <!-- <button class="search__button">search</button> -->
       </div>
+    <button class="search__button">search</button>
+
     </div>
   </body>
 </html>
