--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   </head>
 
   <body>
-    <!-- <div class="preloader">
+    <div class="preloader">
       <img src="./assets/icons/loader.gif" alt="loader" />
       <h3>Loading...</h3>
-    </div> -->
+    </div>
 
     <div class="container">
       <!-- ===================== Navbar Section ===================== -->
